Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.1, 5.0.2
-
None
-
Mac OS X 10.7 + Qt 5.0.2
-
-
e324f5bc0e6abb8772b29f5016afda0814d8f9cd
Description
1) QMenu crashes if you delete it in the destructor of QSystemTrayIcon that is a child of QApplication.
2) Sometimes actions not added to QMenu.
The attached code demonstrates both issues.
Attachments
For Gerrit Dashboard: QTBUG-30756 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
54530,1 | Fix crash when deleting a QMenu on exit | stable | qt/qtbase | Status: MERGED | +2 | 0 |
54662,7 | Cocoa: Improve text heuristic menu item syncing logic | stable | qt/qtbase | Status: MERGED | +2 | 0 |