Fix crash when deleting a QMenu on exit

If the application object is an ancestor of QMenu, dereferencing qApp
in its destructor will cause a crash.

Task-number: QTBUG-30756
Change-Id: I31a33db0fd783bb210a420618911ea8b412e9a0f
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@digia.com>

cregit: e324f5bc0e6abb8772b29f5016afda0814d8f9cd https://github.com/qt/qtbase/commit/e324f5bc0e6abb8772b29f5016afda0814d8f9cd